feat: Implement course purchase functionality and role management
- Added PurchaseService to handle course purchases, including mock payment processing.
- Introduced CoursePurchase entity and repository for tracking purchases.
- Updated CourseService to check purchase access for premium courses.
- Created user_roles table for multi-role management.
- Added migration script to set up purchase and role tables in the database.
- Implemented tests for PurchaseService, CoursePurchaseRepository, and UserRoleRepository.
- Updated application configuration to support CORS.
- Refactored CourseService and ProgressService to utilize PurchaseService for access control.